Changed result from being an immutable list to a mutable list by using collect.(Collectors.toList())